# src/dto/request/order-approved.request.ts
@@ -1,0 +1,7 @@
+import { PickType } from '@nestjs/swagger';
+import { OrderEntity } from '@/database/order.entity';
+
+export class OrderApprovedRequest extends PickType(OrderEntity, [
+  'id',
+  'approved',
+]) {}
