# src/dto/request/order-invoice.request.ts
@@ -1,0 +1,4 @@
+import { PickType } from '@nestjs/swagger';
+import { OrderEntity } from '@/database/order.entity';
+
+export class OrderInvoiceRequest extends PickType(OrderEntity, ['sum']) {}
