# src/endpoint/order.controller.ts
@@ -18,19 +18,20 @@ import {
   ApiResponse,
   ApiTags,
 } from '@nestjs/swagger';
-import { format as dateFormat } from 'date-fns';
-import dateRu from 'date-fns/locale/ru';
 
 import {
   BadRequestError,
   ForbiddenError,
   InternalServerError,
-  InvoiceRequest,
+  OrderInvoiceRequest,
   NotFoundError,
+  OrderGetResponse,
   OrdersGetRequest,
   OrdersGetResponse,
   ServiceUnavailableError,
   UnauthorizedError,
+  OrderApprovedRequest,
+  OrderDownloadRequest,
 } from '@/dto';
 import { JwtAuthGuard, Roles, RolesGuard } from '@/guards';
 import { Status } from '@/enums/status.enum';
@@ -86,9 +87,8 @@ export class OrderController {
   logger = new Logger(OrderController.name);
 
   constructor(
-    private readonly orderService: OrderService,
-    private readonly printService: PrintService,
     private readonly userService: UserService,
+    private readonly orderService: OrderService,
   ) {}
 
   @Post('/')
@@ -128,6 +128,55 @@ export class OrderController {
   @ApiResponse({
     status: 200,
     description: 'Успешный ответ',
+    type: OrderGetResponse,
+  })
+  async invoice(
+    @Req() { user }: ExpressRequest,
+    @Body() { sum }: OrderInvoiceRequest,
+  ): Promise<OrderGetResponse> {
+    const invoice = await this.orderService.create(
+      user,
+      sum,
+      'Autogenerated invoice',
+    );
+
+    return {
+      status: Status.Success,
+      data: invoice,
+    };
+  }
+
+  @Post('approved')
+  @HttpCode(200)
+  @ApiOperation({
+    operationId: 'approved',
+    summary: 'Подтверждение/отклонение инвойса',
+  })
+  @ApiResponse({
+    status: 200,
+    description: 'Успешный ответ',
+  })
+  async approved(
+    @Req() { user }: ExpressRequest,
+    @Body() { id, approved }: OrderApprovedRequest,
+  ): Promise<OrderGetResponse> {
+    const data = await this.orderService.approved(user, id, approved);
+
+    return {
+      status: Status.Success,
+      data,
+    };
+  }
+
+  @Post('download')
+  @HttpCode(200)
+  @ApiOperation({
+    operationId: 'download',
+    summary: 'Метод для скачивания файла excel/pdf/etc',
+  })
+  @ApiResponse({
+    status: 200,
+    description: 'Успешный ответ',
     content: {
       'application/vnd.ms-excel': {
         encoding: {
@@ -145,38 +194,11 @@ export class OrderController {
       },
     },
   })
-  async invoice(
-    @Req() { user: { id: userId } }: ExpressRequest,
+  async download(
+    @Req() { user }: ExpressRequest,
     @Res() res: ExpressResponse,
-    @Body() { format, sum }: InvoiceRequest,
+    @Body() { format, id }: OrderDownloadRequest,
   ): Promise<void> {
-    const [invoice, data] = await this.printService.invoice(
-      userId,
-      format,
-      sum,
-    );
-
-    const specificFormat = formatToContentType[format]
-      ? format
-      : SpecificFormat.XLSX;
-
-    const createdAt = dateFormat(
-      invoice.createdAt,
-      "dd_LLLL_yyyy_'г._в'_hh_mm",
-      {
-        locale: dateRu,
-      },
-    );
-    const invoiceFilename = encodeURI(
-      `Счет_на_оплату_MyScreen_${createdAt}_на_сумму_${invoice.sum}₽.${specificFormat}`,
-    );
-    res.statusCode = 200;
-    res.setHeader(
-      'Content-Disposition',
-      `attachment; filename="${invoiceFilename}"`,
-    );
-    res.setHeader('Content-Type', formatToContentType[format]);
-
-    res.end(data, 'binary');
+    await this.orderService.download(user, res, id, format);
   }
 }
