# static/swagger.yml
@@ -1760,7 +1760,55 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/InvoiceRequest"
+              $ref: "#/components/schemas/OrderInvoiceRequest"
+      responses:
+        "200":
+          description: Успешный ответ
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/OrderGetResponse"
+        "400": *ref_45
+        "401": *ref_46
+        "403": *ref_47
+        "404": *ref_48
+        "500": *ref_49
+        "503": *ref_50
+      tags: *ref_51
+      security: *ref_52
+  /api/v2/order/approved:
+    post:
+      operationId: approved
+      summary: Подтверждение/отклонение инвойса
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/OrderApprovedRequest"
+      responses:
+        "200":
+          description: Успешный ответ
+        "400": *ref_45
+        "401": *ref_46
+        "403": *ref_47
+        "404": *ref_48
+        "500": *ref_49
+        "503": *ref_50
+      tags: *ref_51
+      security: *ref_52
+  /api/v2/order/download:
+    post:
+      operationId: download
+      summary: Метод для скачивания файла excel/pdf/etc
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/OrderDownloadRequest"
       responses:
         "200":
           description: Успешный ответ
@@ -2246,7 +2294,7 @@ paths:
 info:
   title: MyScreen backend API
   description: MyScreen backend API
-  version: 2.37.28
+  version: 2.38.0
   contact:
     name: Stanislav V Vyaliy
     url: https://wisekaa.dev
@@ -4938,10 +4986,40 @@ components:
     OrderRequest:
       type: object
       properties:
+        id:
+          type: string
+          description: Идентификатор файла
+          example: "1234567"
+          format: uuid
         description:
           type: string
           description: Описание заказа
           example: описание заказа
+        approved:
+          type: object
+          description: Подтверждение/отклонение заказа
+          example: true
+        sum:
+          type: number
+          description: Сумма счета
+          example: 1000
+        createdAt:
+          format: date-time
+          type: string
+          description: Время создания
+          example: "2021-01-01T10:00:00.147Z"
+        updatedAt:
+          format: date-time
+          type: string
+          description: Время изменения
+          example: "2021-01-01T10:00:00.147Z"
+      required:
+        - id
+        - description
+        - approved
+        - sum
+        - createdAt
+        - updatedAt
     OrdersGetRequest:
       type: object
       properties:
@@ -4958,6 +5036,7 @@ components:
             enum:
               - id
               - description
+              - approved
               - sum
               - createdAt
               - updatedAt
@@ -4977,6 +5056,10 @@ components:
           type: string
           description: Описание заказа
           example: описание заказа
+        approved:
+          type: object
+          description: Подтверждение/отклонение заказа
+          example: true
         sum:
           type: number
           description: Сумма счета
@@ -4994,6 +5077,7 @@ components:
       required:
         - id
         - description
+        - approved
         - sum
         - createdAt
         - updatedAt
@@ -5016,25 +5100,64 @@ components:
         - status
         - count
         - data
-    InvoiceFormat:
-      type: string
-      enum:
-        - xlsx
-        - pdf
-    InvoiceRequest:
+    OrderInvoiceRequest:
       type: object
       properties:
-        format:
-          description: Формат получаемого файла
-          example: xlsx
-          $ref: "#/components/schemas/InvoiceFormat"
         sum:
           type: number
           description: Сумма счета
           example: 1000
       required:
-        - format
         - sum
+    OrderGetResponse:
+      type: object
+      properties:
+        status:
+          description: Статус операции
+          example: success
+          $ref: "#/components/schemas/Status"
+        data:
+          description: Счет
+          allOf:
+            - $ref: "#/components/schemas/OrderResponse"
+      required:
+        - status
+        - data
+    OrderApprovedRequest:
+      type: object
+      properties:
+        id:
+          type: string
+          description: Идентификатор файла
+          example: "1234567"
+          format: uuid
+        approved:
+          type: object
+          description: Подтверждение/отклонение заказа
+          example: true
+      required:
+        - id
+        - approved
+    InvoiceFormat:
+      type: string
+      enum:
+        - xlsx
+        - pdf
+    OrderDownloadRequest:
+      type: object
+      properties:
+        id:
+          type: string
+          description: Идентификатор файла
+          example: "1234567"
+          format: uuid
+        format:
+          description: Формат получаемого файла
+          example: xlsx
+          $ref: "#/components/schemas/InvoiceFormat"
+      required:
+        - id
+        - format
     PaymentRequest:
       type: object
       properties:
